configuration files
git-svn-id: https://svn.apache.org/repos/asf/isis/site/trunk@1578648 13f79535-47bb-0310-9956-ffa450edef68